--- a/index.html
+++ b/index.html
@@ -7,40 +7,40 @@
 </head>
 <body>
     <nav>
-        <u><h1>Top 5 Best PC Games of All Time</h1></u>
+        <h1><u>Top 5 Best PC Games of All Time</u></h1>
     </nav>
     <hr>
-    <i><h3>Welcome to the ultimate guide for PC gamers! Here, we celebrate the best games that have defined the PC gaming landscape. From action-packed adventures to immersive RPGs, these titles have captivated players worldwide.</h3></i>
+    <h3><i>Welcome to the ultimate guide for PC gamers! Here, we celebrate the best games that have defined the PC gaming landscape. From action-packed adventures to immersive RPGs, these titles have captivated players worldwide.</i></h3>
     <main>
     <hr>
-    <i><h3>Explore the best PC games that have set benchmarks in the gaming industry. From groundbreaking graphics to compelling storytelling, these games have left a lasting impact.</h3></i>
+    <h3><i>Explore the best PC games that have set benchmarks in the gaming industry. From groundbreaking graphics to compelling storytelling, these games have left a lasting impact.</i></h3>
     <ol>
         <li>
-            <h2><a href="#game1">Grand Theft Auto: V Enhanced</a></h2>
+            <h2>Grand Theft Auto: V Enhanced</h2>
             <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/3240220/4c8d7ce5142a528bdac68c093bd1bcc720e2baee/capsule_616x353.jpg?t=1752701585" alt="Grand Theft Auto: V Enhanced">
             <p>Experience the sprawling city of Los Santos like never before with enhanced graphics and gameplay. Dive into a world of crime, adventure, and endless possibilities.</p>
             <a href="https://www.rockstargames.com/V/downloads" target="_blank">Click here to download</a>
         </li>
         <li>
-            <h2><a href="#game2">Red Dead Redemption II</a></h2>
+            <h2>Red Dead Redemption II</h2>
             <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1174180/capsule_616x353.jpg?t=1693526262" alt="Red Dead Redemption II">
             <p>Step into the shoes of Arthur Morgan in this epic tale of life in America's unforgiving heartland. With stunning visuals and a gripping story, this game redefines open-world gaming.</p>
             <a href="https://www.rockstargames.com/reddeadredemption2/downloads" target="_blank">Click here to download</a>
         </li>
         <li>
-            <h2><a href="#game3">God Of War</a></h2>
+            <h2>God Of War</h2>
             <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1593500/capsule_616x353.jpg?t=1693526262" alt="God Of War">
             <p>Join Kratos and his son Atreus on a mythological journey filled with breathtaking landscapes and intense battles. This game combines rich storytelling with innovative gameplay mechanics.</p>
             <a href="https://www.playstation.com/en-us/games/god-of-war/" target="_blank">Click here to download</a>
         </li>
         <li>
-            <h2><a href="#game4">Forza Horizon 5</a></h2>
+            <h2>Forza Horizon 5</h2>
             <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1551360/capsule_616x353.jpg?t=1693526262" alt="Forza Horizon 5">
             <p>Experience the thrill of racing in the vibrant landscapes of Mexico. With a vast open world and a diverse range of vehicles, Forza Horizon 5 offers an exhilarating driving experience.</p>
             <a href="https://www.xbox.com/en-US/games/forza-horizon-5" target="_blank">Click here to download</a>
         </li>
         <li>
-            <h2><a href="#game5">Spider-Man 2</a></h2>
+            <h2>Spider-Man 2</h2>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZsLH15FocDR1FxbCOscXgY2G8aGo5zcD5Kg&s" alt="Spider-Man 2" height="353" width="616">
             <p>Swing through the streets of New York City as Spider-Man, battling iconic villains and saving the city from danger. Spider-Man 2 delivers fast-paced action, fluid web-swinging mechanics, and an engaging story that makes you feel like a true superhero.</p>
             <a href="https://www.playstation.com/en-us/games/marvels-spider-man-2/" target="_blank">Click here to download</a>
