--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <h1><u>Top 5 Best PC Games of All Time</u></h1>
     </nav>
     <hr>
-    <h3><i>Welcome to the ultimate guide for PC gamers! Here, we celebrate the best games that have defined the PC gaming landscape. From action-packed adventures to immersive RPGs, these titles have captivated players worldwide.</i></h3>
+    <p><b><i>Welcome to the ultimate guide for PC gamers! Here, we celebrate the best games that have defined the PC gaming landscape. From action-packed adventures to immersive RPGs, these titles have captivated players worldwide.</i></b></p>
     <main>
     <hr>
-    <h3><i>Explore the best PC games that have set benchmarks in the gaming industry. From groundbreaking graphics to compelling storytelling, these games have left a lasting impact.</i></h3>
+    <p><b><i>Explore the best PC games that have set benchmarks in the gaming industry. From groundbreaking graphics to compelling storytelling, these games have left a lasting impact.</i></b></p>
     <ol>
         <li>
             <h2>Grand Theft Auto: V Enhanced</h2>
