--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <h1><u>Top 5 Best PC Games of All Time</u></h1>
+        <h1>Top 5 Best PC Games of All Time</h1>
     </nav>
     <hr>
     <p><b><i>Welcome to the ultimate guide for PC gamers! Here, we celebrate the best games that have defined the PC gaming landscape. From action-packed adventures to immersive RPGs, these titles have captivated players worldwide.</i></b></p>
