--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
             <h2>Grand Theft Auto: V Enhanced</h2>
             <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/3240220/4c8d7ce5142a528bdac68c093bd1bcc720e2baee/capsule_616x353.jpg?t=1752701585" alt="Grand Theft Auto: V Enhanced">
             <p>Experience the sprawling city of Los Santos like never before with enhanced graphics and gameplay. Dive into a world of crime, adventure, and endless possibilities.</p>
-            <a href="https://www.rockstargames.com/V/downloads" target="_blank">Click here to download</a>
+            <a href="https://www.rockstargames.com/V/downloads" target="_blank">Download Grand Theft Auto: V Enhanced</a>
         </li>
         <li>
             <h2>Red Dead Redemption II</h2>
             <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1174180/capsule_616x353.jpg?t=1693526262" alt="Red Dead Redemption II">
             <p>Step into the shoes of Arthur Morgan in this epic tale of life in America's unforgiving heartland. With stunning visuals and a gripping story, this game redefines open-world gaming.</p>
-            <a href="https://www.rockstargames.com/reddeadredemption2/downloads" target="_blank">Click here to download</a>
+            <a href="https://www.rockstargames.com/reddeadredemption2/downloads" target="_blank">Download Red Dead Redemption II</a>
         </li>
         <li>
             <h2>God Of War</h2>
             <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1593500/capsule_616x353.jpg?t=1693526262" alt="God Of War">
             <p>Join Kratos and his son Atreus on a mythological journey filled with breathtaking landscapes and intense battles. This game combines rich storytelling with innovative gameplay mechanics.</p>
-            <a href="https://www.playstation.com/en-us/games/god-of-war/" target="_blank">Click here to download</a>
+            <a href="https://www.playstation.com/en-us/games/god-of-war/" target="_blank">Download God Of War</a>
         </li>
         <li>
             <h2>Forza Horizon 5</h2>
             <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1551360/capsule_616x353.jpg?t=1693526262" alt="Forza Horizon 5">
             <p>Experience the thrill of racing in the vibrant landscapes of Mexico. With a vast open world and a diverse range of vehicles, Forza Horizon 5 offers an exhilarating driving experience.</p>
-            <a href="https://www.xbox.com/en-US/games/forza-horizon-5" target="_blank">Click here to download</a>
+            <a href="https://www.xbox.com/en-US/games/forza-horizon-5" target="_blank">Download Forza Horizon 5</a>
         </li>
         <li>
             <h2>Spider-Man 2</h2>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZsLH15FocDR1FxbCOscXgY2G8aGo5zcD5Kg&s" alt="Spider-Man 2" height="353" width="616">
             <p>Swing through the streets of New York City as Spider-Man, battling iconic villains and saving the city from danger. Spider-Man 2 delivers fast-paced action, fluid web-swinging mechanics, and an engaging story that makes you feel like a true superhero.</p>
-            <a href="https://www.playstation.com/en-us/games/marvels-spider-man-2/" target="_blank">Click here to download</a>
+            <a href="https://www.playstation.com/en-us/games/marvels-spider-man-2/" target="_blank">Download Spider-Man 2</a>
         </li>
     </ol>
     <hr>
